# cursed-gpt-me

./: .gitignore  .gitmodules  .workspace.toml  AGENTS.md  README.md  load.py  main.py  pyproject.toml  requirements.txt  train.py
datastore/: Dockerfile  README.md  docker-compose.yml  package.json
datastore/.state/: discord_self.json
datastore/datastore-cli/: package.json
datastore/datastore-cli/src/: index.ts
datastore/datastore-core/: package.json
datastore/datastore-core/prisma/: schema.prisma
datastore/datastore-core/prisma/migrations/20260305032740_init/: migration.sql
datastore/datastore-core/prisma/migrations/20260305043034_init/: migration.sql
datastore/datastore-core/prisma/migrations/20260305043700_init/: migration.sql
datastore/datastore-core/src/: db.ts  index.ts
datastore/datastore-server/: package.json
datastore/datastore-server/src/: app.ts  index.ts
discord_import/: __init__.py  pyproject.toml
gpt2/: pyproject.toml
notebooks/: README.md  discord_import.ipynb  gpt2_training.ipynb  requirements.txt
scrapers/discord_self/: .env.example  README.md  requirements.txt  scrape.py
scrapers/discord_self/.state/: discord_self.json  discord_self_public_channels.json  discord_self_retry_failed.json  discord_self_shard_0.json  discord_self_shard_1.json  discord_self_shard_2.json  discord_self_shard_3.json
scrapers/imessage_csv/: .env.example  README.md  scrape.py
src/: discord_datastore.py  discord_loader.py  logging_config.py  message.py
training/gpt2/: README.md  export_sqlite_to_jsonl.py  requirements.txt  train_gpt2.py
training/nanochat/: README.md  train_nanochat_from_sqlite.py
