[project]
name = "gpt-discord-small"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "tqdm>=4.67.3",
]
