[project]
name = "gpt-discord-small"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "aim>=3.29.1",
    "datasets>=4.6.1",
    "duckdb>=1.4.4",
    "evaluate>=0.4.6",
    "ipykernel>=7.2.0",
    "jupyterlab>=4.5.5",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "setuptools<81",
    "tokenizers>=0.22.2",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.3.0",
]
